@@ -24,6 +24,9 @@ linux (4.19.20-2) UNRELEASED; urgency=medium
     is enabled on Orange Pi Plus.
   * [armhf] Enable REGULATOR_SY8106A as module.
 
+  [ dann frazier ]
+  * arm64: lockdown: Move init_lockdown() call after uefi_init()
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Feb 2019 12:49:10 +0000
 
 linux (4.19.20-1) unstable; urgency=medium
